// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTable default has hover class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable">
        Name
      </th>
      <th class="">
        ID
      </th>
      <th class="">
        Enabled
      </th>
      <th class="">
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><span>
              Basic Auth
            </span></td>
      <td><span>
              517526354743085
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Website Desktop
            </span></td>
      <td><span>
              328027447731198
            </span></td>
      <td><span>
              false
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Android App
            </span></td>
      <td><span>
              405383051040955
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default has small class when passed 1`] = `
<table class="k-table has-hover is-small side-border">
  <thead>
    <tr>
      <th class="sortable">
        Name
      </th>
      <th class="">
        ID
      </th>
      <th class="">
        Enabled
      </th>
      <th class="">
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><span>
              Basic Auth
            </span></td>
      <td><span>
              517526354743085
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Website Desktop
            </span></td>
      <td><span>
              328027447731198
            </span></td>
      <td><span>
              false
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Android App
            </span></td>
      <td><span>
              405383051040955
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default renders link in action slot 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable">
        Name
      </th>
      <th class="">
        ID
      </th>
      <th class="">
        Enabled
      </th>
      <th class="">
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><span>
              Basic Auth
            </span></td>
      <td><span>
              517526354743085
            </span></td>
      <td><span>
              true
            </span></td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td><span>
              Website Desktop
            </span></td>
      <td><span>
              328027447731198
            </span></td>
      <td><span>
              false
            </span></td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td><span>
              Android App
            </span></td>
      <td><span>
              405383051040955
            </span></td>
      <td><span>
              true
            </span></td>
      <td><a href="#">Link</a></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable sorting should have sortable class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable">
        Name
      </th>
      <th class="">
        ID
      </th>
      <th class="">
        Enabled
      </th>
      <th class="">
        <!---->
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><span>
              Basic Auth
            </span></td>
      <td><span>
              517526354743085
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Website Desktop
            </span></td>
      <td><span>
              328027447731198
            </span></td>
      <td><span>
              false
            </span></td>
      <td><span>

            </span></td>
    </tr>
    <tr>
      <td><span>
              Android App
            </span></td>
      <td><span>
              405383051040955
            </span></td>
      <td><span>
              true
            </span></td>
      <td><span>

            </span></td>
    </tr>
  </tbody>
</table>
`;
